--- a/apps.json
+++ b/apps.json
@@ -1550,5 +1550,17 @@
       {"name":"hidjoystick.app.js","url":"app.js"},
       {"name":"hidjoystick.img","url":"app-icon.js","evaluate":true}
     ]
+  },
+  { "id": "mtimer",
+    "name": "Multiple Timer App",
+    "shortName":"MultiTimer",
+    "icon": "mtimer.png",
+    "version":"0.01",
+    "description": "Multiple timer instances... maybe",
+    "tags": "",
+    "storage": [
+      {"name":"mtimer.app.js","url":"mtimer.app.js"},
+      {"name":"mtimer.img","url":"mtimer-icon.js","evaluate":true}
+    ]
   }
 ]
