--- a/apps.json
+++ b/apps.json
@@ -1569,7 +1569,8 @@
     "icon": "app.png",
     "version":"0.01",
     "description": "A clock app displaying time as text strings. Currently only German numbers",
-    "tags": "",
+    "tags": "clock",
+    "type":"clock",
     "storage": [
       {"name":"tclock.app.js","url":"app.js"},
       {"name":"tclock.img","url":"app-icon.js","evaluate":true}
