--- a/apps.json
+++ b/apps.json
@@ -1571,6 +1571,7 @@
     "description": "A clock app displaying time as text strings. Currently only German numbers",
     "tags": "clock",
     "type":"clock",
+    "allow_emulator": true,
     "storage": [
       {"name":"tclock.app.js","url":"app.js"},
       {"name":"tclock.img","url":"app-icon.js","evaluate":true}
