--- a/apps.json
+++ b/apps.json
@@ -1571,14 +1571,18 @@
     "name": "Text string clock",
     "shortName":"Text clock",
     "icon": "app.png",
-    "version":"0.04",
+    "version":"0.05",
     "description": "A clock app displaying time as text strings. Currently only German numbers",
     "tags": "clock",
     "type":"clock",
     "allow_emulator": true,
     "storage": [
       {"name":"tclock.app.js","url":"app.js"},
+      {"name":"tclock.settings.js","url":"settings.js"},
       {"name":"tclock.img","url":"app-icon.js","evaluate":true}
+    ],
+    "data": [
+      {"name":"tclock.json"}
     ]
   }
 ]
