--- a/apps.json
+++ b/apps.json
@@ -1572,7 +1572,6 @@
       {"name":"hidjoystick.img","url":"app-icon.js","evaluate":true}
     ]
   },
-<<<<<<< HEAD
   { "id": "mtimer",
     "name": "Multiple Timer App",
     "shortName":"MultiTimer",
@@ -1589,19 +1588,21 @@
     "name": "Text string clock",
     "shortName":"Text clock",
     "icon": "app.png",
-    "version":"0.09",
+    "version":"0.10",
     "description": "A clock app displaying time as text strings. Currently only German numbers",
     "tags": "clock",
     "type":"clock",
     "allow_emulator": true,
     "storage": [
       {"name":"tclock.app.js","url":"app.js"},
+      {"name":"tclock.widget.js","url":"widget.js"},
       {"name":"tclock.settings.js","url":"settings.js"},
       {"name":"tclock.img","url":"app-icon.js","evaluate":true}
     ],
     "data": [
       {"name":"tclock.json"}
-=======
+    ]
+  },
   {
     "id": "largeclock",
     "name": "Large Clock",
@@ -1708,7 +1709,6 @@
     "storage": [
         {"name":"findphone.app.js","url":"app.js"},
         {"name":"findphone.img","url":"app-icon.js","evaluate":true}
->>>>>>> upstream/master
     ]
   }
 ]
